2006-06-07  Francis Kung  <fkung@redhat.com>

	* gnu/testlet/javax/swing/JMenuBar/basic.java: New tests.
	* gnu/testlet/javax/swing/JMenuBar/constructors.java: New tests.
	* gnu/testlet/javax/swing/JMenuBar/getComponentIndex.java: New tests.
	* gnu/testlet/javax/swing/JMenuBar/getMenu.java: New tests.
	* gnu/testlet/javax/swing/JMenuBar/getSubElements.java: New tests.

2006-06-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JInternalFrame/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JLabel/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JMenu/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JMenuBar/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JOptionPane/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JOptionPane/MyJOptionPane.java: New file,
	* gnu/testlet/javax/swing/JPopupMenu/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JScrollBar/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JScrollPane/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JSplitPane/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JTabbedPane/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JTable/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JTableHeader/getInputMap.java: New file,
	* gnu/testlet/javax/swing/JToolBar/getInputMap.java: New file.

2006-06-06  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JList/getInputMap.java: New file.

2006-06-06  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/javax/swing/JFrame/constructors.java: Fixed copyright comments.

2006-06-06  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JTable/AccessibleJTable/AccessibleJTableCell/MyBooleanTableCellRenderer.java: 
	Filled in header details (replacing FIXMEs).

2006-06-06  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JComponent/getInputMap.java: New test.
