@@ -1,3 +1,7 @@
+2006-06-07  Tania Bento  <tbento@redhat.com>
+
+	* gnu/testlet/javax/swing/JButton/constructors.java: New file.
+
 2006-06-07  Francis Kung  <fkung@redhat.com>
 
 	* gnu/testlet/javax/swing/JMenuBar/basic.java: New tests.
